--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.0"
+    "react-native": "0.64.0",
+    "react-native-date-picker": "3.2.10"
   },
   "devDependencies": {
     "@babel/core": "7.13.16",
