--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.15.4",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-date-picker": "3.2.10"
